# calite

./: .gitignore  README.md  build_run.sh  setup.cfg  setup.py
calite/: __init__.py
calite/specalib/: __init__.py  calibutil.py  specalib.py  specfit.py
calite/specio/: __init__.py  specio.py
calite/specstruct/: __init__.py  specstruct.py  spectruct.py
calite/utils/: __init__.py  fig_utils.py  util.py
tests/: test_calib.py
