[metadata]
name = calite
version = 0.0.1
author = Josh Calcino
author_email = josh.calcino@gmail.com
license = MIT
url = https://github.com/
description = None
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    scipy
    emcee
    chainconsumer
include_package_data = True
